Add buttons and display UI

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<script src="game.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="game.js" defer></script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <p>Rounds finished: <span id="round">0</span></p>
+    <p>Last round result: <span id="result">No rounds played yet!</span></p>
+    <p>Player score: <span id="playerScore">0</span></p>
+    <p>Computer score: <span id="computerScore">0</span></p>
+    <p>Ties: <span id="ties">0</span></p>
+</body>
+</html>
